about.css change

--- a/index.html
+++ b/index.html
@@ -35,42 +35,43 @@
         <figcaption></figcaption>
       </figure>
       <div class="musicians">
-          <div class="arrow-left">
-            <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="left">
-          </div>
-        <h1>Court Sheard</h1>
+        <div class="arrow arrow-left">
+          <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="left">
+        </div>
+        <div class="fullname">
+          <h1 class="first">Court</h1>
+          <h1 class="last">Sheard</h1>
+        </div>
         <article class="">
+          <div class="list-name">
+              <div class="name">Lawrin Alton</div>
+              <div class="circle"></div>
+              <div class="instrument">Vocalist</div>
 
-        <ul>
-          <li>
-            <div class="name">Lawrin Alton</div>
-            <div class="instrument">Vocalist</div>
-          </li>
-          <li>
-            <div class="name">Charles Timmy</div>
-            <div class="instrument">Guitar</div>
-          </li>
-          <li>
-            <div class="name">Court Sheard</div>
-            <div class="instrument">Bass</div>
-          </li>
-          <li>
-            <div class="name">Cade Ryker</div>
-            <div class="instrument">Drums</div>
-          </li>
-          <li>
-            <div class="name">Tommie Brendan</div>
-            <div class="instrument">Electronics</div>
-          </li>
-        </ul>
-        <h3>Meet our band</h3>
-        <p>
-          Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
-        </p>
-      </article>
-          <div class="arrow-right">
-            <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
+              <div class="name">Charles Timmy</div>
+              <div class="circle"></div>
+              <div class="instrument">Guitar</div>
+
+              <div class="name">Court Sheard</div>
+              <div class="circle"></div>
+              <div class="instrument">Bass</div>
+
+              <div class="name">Cade Ryker</div>
+              <div class="circle"></div>
+              <div class="instrument">Drums</div>
+
+              <div class="name">Tommie Brendan</div>
+              <div class="circle"></div>
+              <div class="instrument">Electronics</div>
           </div>
+          <h3>Meet our band</h3>
+          <p>
+            Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
+          </p>
+        </article>
+        <div class="arrow arrow-right">
+          <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
+        </div>
       </div> <!-- Musicians -->
     </div><!-- Container -->
   </section>
