about.css change and add jquery for the scroll

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           <h1 class="last">Sheard</h1>
         </div>
         <article class="">
-          <div class="list-name">
+          <div class="box-rotate">
+            <div class="list-name">
               <div class="name">Lawrin Alton</div>
               <div class="circle"></div>
               <div class="instrument">Vocalist</div>
@@ -52,9 +53,9 @@
               <div class="circle"></div>
               <div class="instrument">Guitar</div>
 
-              <div class="name">Court Sheard</div>
-              <div class="circle"></div>
-              <div class="instrument">Bass</div>
+              <div class="active name">Court Sheard</div>
+              <div class="active circle"></div>
+              <div class="active instrument">Bass</div>
 
               <div class="name">Cade Ryker</div>
               <div class="circle"></div>
@@ -63,6 +64,7 @@
               <div class="name">Tommie Brendan</div>
               <div class="circle"></div>
               <div class="instrument">Electronics</div>
+            </div>
           </div>
           <h3>Meet our band</h3>
           <p>
@@ -85,5 +87,7 @@
   <footer id="contact" class="contact">
     <div class="container"></div>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
