--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <figcaption></figcaption>
       </figure>
       <div class="musicians">
-        <div class="arrow arrow-left">
+        <div id="prev" class="arrow arrow-left">
           <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="left">
         </div>
-        <div class="fullname">
-          <h1 class="first">Court</h1>
-          <h1 class="last">Sheard</h1>
-        </div>
-        <article class="">
-          <div class="box-rotate">
+        <div class="info">
+          <div class="fullname">
+            <h1 class="first">Court</h1>
+            <h1 class="last">Sheard</h1>
+          </div>
+          <!-- <div class="box-rotate"> -->
             <div class="list-name">
               <div class="name">Lawrin Alton</div>
               <div class="circle"></div>
@@ -65,13 +65,15 @@
               <div class="circle"></div>
               <div class="instrument">Electronics</div>
             </div>
-          </div>
-          <h3>Meet our band</h3>
-          <p>
-            Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
-          </p>
-        </article>
-        <div class="arrow arrow-right">
+          <!-- </div> -->
+          <!-- <article class=""> -->
+            <h3>Meet our band</h3>
+            <p>
+              Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
+            </p>
+          <!-- </article> -->
+        </div><!-- INFO -->
+        <div id="next" class="arrow arrow-right">
           <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
         </div>
       </div> <!-- Musicians -->
