jqure animation change

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 
   <section id="about" class="about">
     <div class="container">
-      <div class="musicians">
       <figure class="musician-img">
-        <img src="https://source.unsplash.com/JTa5MN7ObbM/1600x900">
+        <!-- <img src="https://source.unsplash.com/JTa5MN7ObbM/1600x900"> -->
+        <div class="img"></div>
         <figcaption></figcaption>
       </figure>
+      <div class="musicians">
         <div id="prev" class="arrow arrow-left">
           <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="left">
         </div>
@@ -43,35 +44,31 @@
             <h1 class="first">Court</h1>
             <h1 class="last">Sheard</h1>
           </div>
-          <!-- <div class="box-rotate"> -->
-            <div class="list-name">
-              <div class="name">Lawrin Alton</div>
-              <div class="circle"></div>
-              <div class="instrument">Vocalist</div>
+          <div class="list-name">
+            <div class="name">Lawrin Alton</div>
+            <div class="circle"></div>
+            <div class="instrument">Vocalist</div>
 
-              <div class="name">Charles Timmy</div>
-              <div class="circle"></div>
-              <div class="instrument">Guitar</div>
+            <div class="name">Charles Timmy</div>
+            <div class="circle"></div>
+            <div class="instrument">Guitar</div>
 
-              <div class="active name">Court Sheard</div>
-              <div class="active circle"></div>
-              <div class="active instrument">Bass</div>
+            <div class="active name">Court Sheard</div>
+            <div class="active circle"></div>
+            <div class="active instrument">Bass</div>
 
-              <div class="name">Cade Ryker</div>
-              <div class="circle"></div>
-              <div class="instrument">Drums</div>
+            <div class="name">Cade Ryker</div>
+            <div class="circle"></div>
+            <div class="instrument">Drums</div>
 
-              <div class="name">Tommie Brendan</div>
-              <div class="circle"></div>
-              <div class="instrument">Electronics</div>
-            </div>
-          <!-- </div> -->
-          <!-- <article class=""> -->
-            <h3>Meet our band</h3>
-            <p>
-              Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
-            </p>
-          <!-- </article> -->
+            <div class="name">Tommie Brendan</div>
+            <div class="circle"></div>
+            <div class="instrument">Electronics</div>
+          </div>
+          <h3>Meet our band</h3>
+          <p>
+            Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlits. Squid yr mlkhk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.
+          </p>
         </div><!-- INFO -->
         <div id="next" class="arrow arrow-right">
           <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
