--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
           <h4>Suprise Without Flaws</h4>
           <h5>01. Clouds In The Forest</h5>
           <div class="player">
-            <div class="prev"></div>
+            <div class="prev"><div class="arrow"></div></div>
             <div class="control">
               <div class="play"></div>
               <div class="pause"></div>
             </div>
-            <div class="next"><div class="prev"></div></div>
+            <div class="next"><div class="arrow"></div></div>
             <div class="track">
               <div class="progress"></div>
               <div class="current"></div>
