shared util in modules

--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
           <h4>Suprise Without Flaws</h4>
           <h5>01. Clouds In The Forest</h5>
           <div class="player">
-            <div class="prev"><div class="arrow"></div></div>
+            <div class=""><div id="prevTrack"><div class="arrow"></div></div></div>
             <div class="control">
               <div class="play"></div>
               <div class="pause"></div>
             </div>
-            <div class="next"><div class="arrow"></div></div>
+            <div class=""><div id="nextTrack" class="arrow-right"><div class="arrow"></div></div></div>
             <div class="track">
               <div class="progress"></div>
               <div class="current"></div>
@@ -206,7 +206,7 @@
     <div class="container"></div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="main.js" charset="utf-8"></script>
-  <script src="player.js" charset="utf-8"></script>
+  <script type="module" src="main.js" charset="utf-8"></script>
+  <script type="module" src="player.js" charset="utf-8"></script>
 </body>
 </html>
