--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="cover">
           <img src="./The Band PSD/The Band PSD-assets/Cover Image.png" alt="cover">
         </div>
-        <div class="discography">
+        <div id="discography" class="discography">
           <div class="name">Suprise Without Flaws</div>
           <div class="circle">2015</div>
           <div class="listen"><button>Listen</button></div>
@@ -125,7 +125,7 @@
               </audio>
           </div>
         </div>
-        <div class="player-list">
+        <div id="playerList" class="player-list">
           <h4>Suprise Without Flaws</h4>
           <ul>
             <li>
