--- a/index.html
+++ b/index.html
@@ -84,25 +84,10 @@
           <img src="./The Band PSD/The Band PSD-assets/Cover Image.png" alt="cover">
         </div>
         <div id="discography" class="discography">
-          <div class="name">Suprise Without Flaws</div>
-          <div class="circle">2015</div>
-          <div class="listen"><button>Listen</button></div>
-          <div class="buy"><button>Buy</button></div>
-
-          <div class="name">Mists Of A Shadow</div>
-          <div class="circle">2014</div>
-          <div class="listen"><button>Listen</button></div>
-          <div class="buy"><button>Buy</button></div>
-
-          <div class="name">Heroes Of The Sun</div>
-          <div class="circle">2013</div>
-          <div class="listen"><button>Listen</button></div>
-          <div class="buy"><button>Buy</button></div>
-
-          <div class="name">Pucure Of The Past</div>
-          <div class="circle">2012</div>
-          <div class="listen"><button>Listen</button></div>
-          <div class="buy"><button>Buy</button></div>
+          <h2>Discography</h2>
+          <div class="list">
+            <h3>Not found album</h3>
+          </div>
         </div>
         <div class="song">
           <h2>Now playing</h2>
@@ -128,69 +113,7 @@
         <div id="playerList" class="player-list">
           <h4>Suprise Without Flaws</h4>
           <ul>
-            <li>
-              <div class="triangle"></div>
-              <div class="num">01.</div>
-              <h5>Clouds In The Forest</h5>
-              <div class="point">......................</div>
-              <div class="long">3:20</div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
-            <li>
-              <div class="triangle"></div>
-              <div class="num"></div>
-              <h5></h5>
-              <div class="point">......................</div>
-              <div class="long"></div>
-            </li>
+            
           </ul>
         </div>
       </div>
