--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#music">Music</a></li>
             <li><a href="#tours">Tours</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="admin.html">Admin</a></li>
           </ul>
         </nav>
         <div class="h1">
@@ -113,7 +114,7 @@
         <div id="playerList" class="player-list">
           <h4>Suprise Without Flaws</h4>
           <ul>
-            
+
           </ul>
         </div>
       </div>
