--- a/admin.html
+++ b/admin.html
@@ -13,48 +13,65 @@
       <header>
         <h1>Admin Panel</h1>
         <input type="file" id="audioFile" webkitdirectory directory multiple>
+
+        <div class="tourPanel">
+          <form  id="tourAdd" name="tourData">
+            <input type="text" name="name" value="" required placeholder="Name">
+            <input type="date" name="date" value="" required placeholder="Date">
+            <input type="text" name="city" value="" required placeholder="City">
+            <input type="text" name="contry" value="" required placeholder="Contry">
+            <!-- <input type="submit" name="submit" value="Add tour"> -->
+            <!-- <input type="button" name="send" value="Add New Tour"> -->
+            <button type="submit">Add</button>
+          </form>
+          <!-- </div> -->
+          <h2>Tours</h2>
+          <ul id="tourList">
+
+          </ul>
+        </div>
       </header>
     </div><!-- Container -->
   </section>
   <!-- Chrome authentication -->
   <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <a href="/"><h3>Firebase Authentication</h3></a>
-      </div>
-    </div>
-  </header>
-
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-
-      <!-- Container for the demo -->
-      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Google Authentication with Popup</h2>
+    <!-- Header section containing title -->
+    <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
+      <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
+        <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
+          <a href="/"><h3>Firebase Authentication</h3></a>
         </div>
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>Sign in with your Google account below.</p>
+      </div>
+    </header>
 
-          <!-- Button that handles sign-in/sign-out -->
-          <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with Google</button>
+    <main class="mdl-layout__content mdl-color--grey-100">
+      <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
 
-          <!-- Container where we'll display the user details -->
-          <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
-            <pre><code id="quickstart-account-details">null</code></pre>
-            <div>Google OAuth Access Token:</div>
-            <pre><code id="quickstart-oauthtoken">null</code></pre>
+        <!-- Container for the demo -->
+        <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
+          <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
+            <h2 class="mdl-card__title-text">Google Authentication with Popup</h2>
+          </div>
+          <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+            <p>Sign in with your Google account below.</p>
+
+            <!-- Button that handles sign-in/sign-out -->
+            <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with Google</button>
+
+            <!-- Container where we'll display the user details -->
+            <div class="quickstart-user-details-container">
+              Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+              <div>Firebase auth <code>currentUser</code> object value:</div>
+              <pre><code id="quickstart-account-details">null</code></pre>
+              <div>Google OAuth Access Token:</div>
+              <pre><code id="quickstart-oauthtoken">null</code></pre>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-</div>
+    </main>
+  </div>
 
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
 
@@ -72,114 +89,148 @@
   const theBandApp = firebase.initializeApp(config);
   const storage = theBandApp.storage();
   const storageRef = storage.ref();
-  // const provider = new firebase.auth.GoogleAuthProvider();
-  // let credential = provider.credential(null, "241471440965-bui503gldf3pqposnqp0u0855g24ibah.apps.googleusercontent.com");
-  // firebase.auth().signInAndRetrieveDataWithCredential(credential);
-  //
-  // firebase.auth().signOut().then(function() {
-  //   console.log('Sign-out successful.');
-  // }).catch(function(error) {
-  //   console.log('An error happened.');
-  // });
+  const db = theBandApp.firestore();
+  const dbSettings = {timestampsInSnapshots: true};
+  db.settings(dbSettings);
+
+  db.collection("tours").get().then((querySnapshot) => {
+    let tourList = document.getElementById('tourList');
+    console.log(tourList);
+    let list = "";
+    querySnapshot.forEach((doc) => {
+      console.log(doc.data());
+      // console.log(typeof(doc.data().date), doc.data().date.toDate().getFullYear());
+      // console.log(`${doc.id} => ${doc.data()}`);
+      let data = doc.data();
+      list += `<span>${data.name}</span><br>`;
+      let date = new Date(data.date.seconds*1000);
+      date = date.toLocaleDateString('en-US',{year:'numeric', month: '2-digit', day: '2-digit'})
+      .replace(/(\d+)\/(\d+)\/(\d+)/,'$2/$1/$3');
+      console.log('Date: ',date);
+      list += `<span>${date}</span><br>`;
+      list += `<span>${data.city}</span><br>`;
+      list += `<span>${data.country}</span><br>`;
+      list = `<li>${list}</li>`;
+    });
+    tourList.innerHTML = list;
+  });
+
+  const form = document.forms.tourData;
+
+  form.addEventListener('submit', (ev)=>{
+    ev.preventDefault();
+    console.log(form.name.value);
+    console.log(form.date.value);
+    console.log(form.city.value);
+    console.log(form.contry.value);
+    db.collection("tours").doc().set({
+      name: form.name.value,
+      date: new Date(form.date.value),
+      city: form.city.value,
+      country: form.contry.value
+    })
+    .then(function() {
+      console.log("Document successfully written!");
+    })
+    .catch(function(error) {
+      console.error("Error writing document: ", error);
+    });
+  });
+
 
   // authentication
-    /**
-     * Function called when clicking the Login/Logout button.
-     */
-    // [START buttoncallback]
-    function toggleSignIn() {
-      if (!firebase.auth().currentUser) {
-        // [START createprovider]
-        var provider = new firebase.auth.GoogleAuthProvider();
-        // [END createprovider]
-        // [START addscopes]
-        provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
-        // [END addscopes]
-        // [START signin]
-        firebase.auth().signInWithPopup(provider).then(function(result) {
-          // This gives you a Google Access Token. You can use it to access the Google API.
-          var token = result.credential.accessToken;
-          // The signed-in user info.
-          var user = result.user;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-oauthtoken').textContent = token;
-          // [END_EXCLUDE]
-        }).catch(function(error) {
-          // Handle Errors here.
-          var errorCode = error.code;
-          var errorMessage = error.message;
-          // The email of the user's account used.
-          var email = error.email;
-          // The firebase.auth.AuthCredential type that was used.
-          var credential = error.credential;
-          // [START_EXCLUDE]
-          if (errorCode === 'auth/account-exists-with-different-credential') {
-            alert('You have already signed up with a different auth provider for that email.');
-            // If you are using multiple auth providers on your app you should handle linking
-            // the user's accounts here.
-          } else {
-            console.error(error);
-          }
-          // [END_EXCLUDE]
-        });
-        // [END signin]
-      } else {
-        // [START signout]
-        firebase.auth().signOut();
-        // [END signout]
-      }
-      // [START_EXCLUDE]
-      document.getElementById('quickstart-sign-in').disabled = true;
-      // [END_EXCLUDE]
-    }
-    // [END buttoncallback]
-    /**
-     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
-     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
-     *    out, and that is where we update the UI.
-     */
-    function initApp() {
-      // Listening for auth state changes.
-      // [START authstatelistener]
-      firebase.auth().onAuthStateChanged(function(user) {
-        if (user) {
-          // User is signed in.
-          var displayName = user.displayName;
-          var email = user.email;
-          var emailVerified = user.emailVerified;
-          var photoURL = user.photoURL;
-          var isAnonymous = user.isAnonymous;
-          var uid = user.uid;
-          var providerData = user.providerData;
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign out';
-          document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
-          // [END_EXCLUDE]
-        } else {
-          // User is signed out.
-          // [START_EXCLUDE]
-          document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
-          document.getElementById('quickstart-sign-in').textContent = 'Sign in with Google';
-          document.getElementById('quickstart-account-details').textContent = 'null';
-          document.getElementById('quickstart-oauthtoken').textContent = 'null';
-          // [END_EXCLUDE]
-        }
+  /**
+  * Function called when clicking the Login/Logout button.
+  */
+  // [START buttoncallback]
+  function toggleSignIn() {
+    if (!firebase.auth().currentUser) {
+      // [START createprovider]
+      var provider = new firebase.auth.GoogleAuthProvider();
+      // [END createprovider]
+      // [START addscopes]
+      provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
+      // [END addscopes]
+      // [START signin]
+      firebase.auth().signInWithPopup(provider).then(function(result) {
+        // This gives you a Google Access Token. You can use it to access the Google API.
+        var token = result.credential.accessToken;
+        // The signed-in user info.
+        var user = result.user;
         // [START_EXCLUDE]
-        document.getElementById('quickstart-sign-in').disabled = false;
+        document.getElementById('quickstart-oauthtoken').textContent = token;
+        // [END_EXCLUDE]
+      }).catch(function(error) {
+        // Handle Errors here.
+        var errorCode = error.code;
+        var errorMessage = error.message;
+        // The email of the user's account used.
+        var email = error.email;
+        // The firebase.auth.AuthCredential type that was used.
+        var credential = error.credential;
+        // [START_EXCLUDE]
+        if (errorCode === 'auth/account-exists-with-different-credential') {
+          alert('You have already signed up with a different auth provider for that email.');
+          // If you are using multiple auth providers on your app you should handle linking
+          // the user's accounts here.
+        } else {
+          console.error(error);
+        }
         // [END_EXCLUDE]
       });
-      // [END authstatelistener]
-      document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
+      // [END signin]
+    } else {
+      // [START signout]
+      firebase.auth().signOut();
+      // [END signout]
     }
-    window.onload = function() {
-      initApp();
-    };
-
-
-
-
-
+    // [START_EXCLUDE]
+    document.getElementById('quickstart-sign-in').disabled = true;
+    // [END_EXCLUDE]
+  }
+  // [END buttoncallback]
+  /**
+  * initApp handles setting up UI event listeners and registering Firebase auth listeners:
+  *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
+  *    out, and that is where we update the UI.
+  */
+  function initApp() {
+    // Listening for auth state changes.
+    // [START authstatelistener]
+    firebase.auth().onAuthStateChanged(function(user) {
+      if (user) {
+        // User is signed in.
+        var displayName = user.displayName;
+        var email = user.email;
+        var emailVerified = user.emailVerified;
+        var photoURL = user.photoURL;
+        var isAnonymous = user.isAnonymous;
+        var uid = user.uid;
+        var providerData = user.providerData;
+        // [START_EXCLUDE]
+        document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
+        document.getElementById('quickstart-sign-in').textContent = 'Sign out';
+        document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+        // [END_EXCLUDE]
+      } else {
+        // User is signed out.
+        // [START_EXCLUDE]
+        document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
+        document.getElementById('quickstart-sign-in').textContent = 'Sign in with Google';
+        document.getElementById('quickstart-account-details').textContent = 'null';
+        document.getElementById('quickstart-oauthtoken').textContent = 'null';
+        // [END_EXCLUDE]
+      }
+      // [START_EXCLUDE]
+      document.getElementById('quickstart-sign-in').disabled = false;
+      // [END_EXCLUDE]
+    });
+    // [END authstatelistener]
+    document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
+  }
+  window.onload = function() {
+    initApp();
+  };
 
   // upload file
   const audioFile = document.getElementById('audioFile');
@@ -263,7 +314,6 @@
     });
 
   }
-
 
 </script>
 </body>
