--- a/index.html
+++ b/index.html
@@ -123,7 +123,21 @@
 
 
   <section id="tours" class="tours">
-    <div class="container"></div>
+    <div class="container">
+      <h1>Tour dates</h1>
+      <div class="tabloList">
+        <div class="tour"></div>
+        <div class="date"></div>
+        <div class="city"></div>
+        <div class="contry"></div>
+      </div>
+      <div class="ticketList">
+        <div class="date"></div>
+        <h4></h4>
+        <button>Buy ticket</button>
+      </div>
+
+    </div>
   </section>
 
   <footer id="contact" class="contact">
