--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
-  <script type="module" src="fb_func.js" charset="utf-8"></script>
+  <script type="module" src="fb_password.js" charset="utf-8"></script>
   <script type="module" src="main.js" charset="utf-8"></script>
   <script type="module" src="player.js" charset="utf-8"></script>
 </body>
