--- a/admin.html
+++ b/admin.html
@@ -13,6 +13,7 @@
     <div class="container">
       <header>
         <h1>Admin Panel</h1>
+
         <input type="file" id="audioFile" webkitdirectory directory multiple>
 
         <div class="tourPanel">
@@ -32,31 +33,28 @@
     </div><!-- Container -->
   </section>
 
-    <section id="authentication" class="authentication">
-      <div class="container">
-        <main>
-          <h2 class="mdl-card__title-text">Google Authentication with Popup</h2>
-          <button class="" id="quickstart-sign-in">
-            <i class="fas fa-user"></i>
-            <i class="fab fa-google"></i>
-          </button>
-          <p>Sign in with your Google account below.</p>
-          <div style="display: none;" class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
-            <pre><code id="quickstart-account-details">null</code></pre>
-            <div>Google OAuth Access Token:</div>
-            <pre><code id="quickstart-oauthtoken">null</code></pre>
-          </div>
-        </main>
-
-      </div>
-
-    </section>
-
+  <section id="authentication" class="authentication">
+    <div class="container">
+      <main>
+        <h2 class="mdl-card__title-text">Google Authentication with Popup</h2>
+        <button class="" id="quickstart-sign-in">
+          <i class="fas fa-user"></i>
+          <i class="fab fa-google"></i>
+        </button>
+        <p>Sign in with your Google account below.</p>
+        <div style="display: none;" class="quickstart-user-details-container">
+          Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+          <div>Firebase auth <code>currentUser</code> object value:</div>
+          <pre><code id="quickstart-account-details">null</code></pre>
+          <div>Google OAuth Access Token:</div>
+          <pre><code id="quickstart-oauthtoken">null</code></pre>
+        </div>
+      </main>
+    </div>
+  </section>
 
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
-
-<script src="admin.js" charset="utf-8"></script>
+  <script type="module" src="fb_password.js" charset="utf-8"></script>
+  <script type="module" src="admin.js" charset="utf-8"></script>
 </body>
 </html>
