tour style prefer

--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@
   <section id="tours" class="tours">
     <div class="container">
       <h2>Tour dates</h2>
-      <div id="tabloList" class="tabloList">
-        <div class="tour"></div>
-        <div class="date"></div>
-        <div class="city"></div>
-        <div class="contry"></div>
+      <div class="tabloList">
+        <div id="prev" class="arrow arrow-left">
+          <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="left">
+        </div>
+        <div id="tabloList" class=""></div>
+        <div id="next" class="arrow arrow-right">
+          <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
+        </div>
       </div>
       <div class="ticketList">
         <div class="date"></div>
