--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
           <img src="./The Band PSD/The Band PSD-assets/left arrow.svg" alt="right">
         </div>
       </div>
-      <div class="ticketList">
-        <div class="date"></div>
-        <h4></h4>
-        <button>Buy ticket</button>
+      <div id="ticketList" class="ticketList">
       </div>
     </div>
   </section>
