--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <title>The Band</title>
 </head>
 <body>
   <section class="header">
     <div class="container">
       <header>
-        <nav>
-          <ul>
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#music">Music</a></li>
-            <li><a href="#tours">Tours</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <!-- <li><a href="admin.html">Admin</a></li> -->
-          </ul>
-        </nav>
+        <div class="nav">
+          <nav>
+            <ul>
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#music">Music</a></li>
+              <li><a href="#tours">Tours</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <!-- <li><a href="admin.html">Admin</a></li> -->
+            </ul>
+          </nav>
+        </div>
         <div class="h1">
           <h1>We are</h1>
           <h1>the band</h1>
@@ -139,7 +142,34 @@
   </section>
 
   <footer id="contact" class="contact">
-    <div class="container"></div>
+    <div class="container">
+      <h1>Contact</h1>
+      <a class="telephone" href="tel:+48202-555-0114">+48 202-555-0114</a>
+      <div class="subscribe">
+        <form action="" name="formSubscribe">
+          <button type="submit">Subscribe</button>
+          <input type="email" name="subscribe" value="">
+        </form>
+        <div class="social">
+          <a href="http://youtube.com"><i class="fab fa-youtube"></i></a>
+          <a href="http://facebook.com">
+          <i class="fab fa-facebook-f"></i></a>
+        </div>
+      </div>
+      <div class="underworld">
+        <h4>Copyright 2019 &copy by the end</h4>
+        <nav>
+          <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#music">Music</a></li>
+            <li><a href="#tours">Tours</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="admin.html">Admin</a></li> -->
+          </ul>
+        </nav>
+      </div>
+    </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
