--- a/public/admin.html
+++ b/public/admin.html
@@ -15,7 +15,7 @@
         <h1>Admin Panel</h1>
 
         <div class="audioPanel panel">
-          <input type="file" id="audioFile" name="files" webkitdirectory directory multiple>
+          <input type="file" id="audioFile" name="file" webkitdirectory multiple="">
           <button type="submit" id="download">Download</button>
           <div class="downloadFiles" id="downloadFiles">
 
