--- a/public/admin.html
+++ b/public/admin.html
@@ -64,6 +64,8 @@
   </section>
 
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+  <!-- <script src="https://gist.github.com/alexhawkins/931c0af2d827dd67a3e8.js"></script> -->
+  <script type="module" src="jsonstringify.js" charset="utf-8"></script>
   <script type="module" src="fb_password.js" charset="utf-8"></script>
   <script type="module" src="admin.js" charset="utf-8"></script>
 </body>
